<resources>
    <string name="app_name">CryptoApp</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_text">Время последнего обновления: %s</string>
    <string name="updated">Обновлено:</string>
    <string name="last_tr">Последняя сделка:</string>
    <string name="max_day">Максимум за день:</string>
    <string name="min_day">Минимум за день:</string>
    <string name="price">Цена:</string>
    <string name="or">/</string>
</resources>